edited html file

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 	</h1>
 	
 	<p>
-	my favourite car
+	MY favourite car
 	</p>
 	
 	<body>
 	<img src="https://imgd-ct.aeplcdn.com/664x415/cw/ec/23766/Ford-Mustang-Left-Front-Three-Quarter-74324.jpg?v=201711021421&q=80">
+	<a href="cse.html">cse</a>
 	</body>
 	
 
